# siftd

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  LICENSE  PROGRESS.json  README.md  RESEARCH-project-cli.md  ROADMAP.md  dev  pyproject.toml  tbd
.claude/: settings.json
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
.obsidian/: workspace.json
bench/: build.py  corpus_analysis.py  queries.json  run.py  view.py
bench/strategies/: baseline.json  concat-response.json  min-100.json  min-200-response-only.json
docs/: adapters.md  api.md  cli.md  config.md  data-model.md  plugin.md  principles.md  queries.md  search.md  tags.md  writing-adapters.md
docs/dev/: adapter-research-reference.md  embed-bench-feature.md  review-experience-with-strata.md  use-experience-feedback.md
docs/reference/: api.md  cli.md  schema.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: session-start.sh  skill-reminder.sh  skill-required.sh
queries/: cost.sql  shell-analysis.sql
scripts/: _lib.sh  agent.sh  check.sh  docs.sh  gen-cli-docs.sh  gen_docs.py  lint.sh  review-prompt.md  review.sh  setup.sh  test-all.sh  test.sh
scripts/examples/: bulk-tag.py  find-decisions.py  weekly-cost.sql
scripts/lib/: README.md  cli.sh  dev.sh  log.sh  paths.sh  templates.sh
scripts/prompts/: implement.md  interactive.md  plan.md  research.md  review.md
src/: cli.py  paths.py
src/adapters/: __init__.py  aider.py  claude_code.py  cline.py  codex_cli.py  cursor.py  gemini_cli.py  goose.py  registry.py
src/domain/: __init__.py  models.py  source.py
src/embeddings/: __init__.py  base.py  chunker.py
src/ingestion/: discovery.py  orchestration.py
src/siftd/: __init__.py  backfill.py  cli.py  cli_ask.py  cli_common.py  cli_data.py  cli_export.py  cli_install.py  cli_meta.py  cli_peek.py  cli_query.py  cli_search.py  cli_sessions.py  cli_tags.py  config.py  git.py  math.py  paths.py  plugin_discovery.py  search.py
src/storage/: __init__.py  embeddings.py  schema.sql  sqlite.py
src/strata/: __init__.py  backfill.py  cli.py  cli_ask.py  config.py  paths.py  search.py
src/tbd/: __init__.py  cli.py  config.py  paths.py  search.py
tests/: conftest.py  test_adapters.py  test_api.py  test_blobs.py  test_chunker.py  test_cli.py  test_cli_ask.py  test_cli_search.py  test_config.py  test_content_filters.py  test_date_parsing.py  test_derivative.py  test_doctor.py  test_embeddings.py  test_embeddings_availability.py  test_embeddings_storage.py  test_exclude_active.py  test_export.py  test_formatters.py  test_git.py  test_imports.py  test_ingestion.py  test_integration.py  test_live_tagging.py  test_mmr.py  test_models.py  test_peek.py  test_queries.py  test_readonly.py  test_sessions.py  test_shell_categorization.py  test_temporal_weighting.py  test_unified_search.py  test_workspace_identity.py
tests/acceptance/: test_basics.t  (+2 more)
(+145 files in other folders)
