[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strata"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "tqdm",
    "pyyaml",
    "loguru",
    "tomlkit",
]

[project.scripts]
strata = "strata.cli:main"

[project.optional-dependencies]
embed = [
    "fastembed",
    "numpy",
    "onnxruntime",
    "tokenizers",
    "huggingface-hub",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "embeddings: tests that require embedding dependencies",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
