[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strata"
version = "0.1.0"
description = "Personal LLM usage analytics. Ingest conversation logs from CLI coding tools, query via FTS5 and semantic search."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["llm", "analytics", "claude", "conversation", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "httpx",
    "tqdm",
    "pyyaml",
    "loguru",
    "tomlkit",
]

[project.scripts]
strata = "strata.cli:main"

[project.optional-dependencies]
embed = [
    "fastembed",
    "numpy",
    "onnxruntime",
    "tokenizers",
    "huggingface-hub",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "embeddings: tests that require embedding dependencies",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
